COMP 102x Project Template/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Yurico\Documents\lab\coursLib;C:\Users\Yurico\Documents\lab\coursLib\comp102x.jar;C:\Users\Yurico\Documents\lab\coursLib\core-2.3-SNAPSHOT.jar;C:\Users\Yurico\Documents\lab\coursLib\ghost4j-0.3.1.jar;C:\Users\Yurico\Documents\lab\coursLib\jai_imageio.jar;C:\Users\Yurico\Documents\lab\coursLib\javase-2.3-SNAPSHOT.jar;C:\Users\Yurico\Documents\lab\coursLib\jna.jar;C:\Users\Yurico\Documents\lab\coursLib\junit-4.10.jar;C:\Users\Yurico\Documents\lab\coursLib\tess4j.jar;C:\Users\Yurico\Documents\lab\COMP 102x Project Template
-d
C:\Users\Yurico\Documents\lab\COMP 102x Project Template\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Yurico\Documents\lab\COMP 102x Project Template\StudentLogic10.java
<---- end of javadoc command ---->
Loading source file C:\Users\Yurico\Documents\lab\COMP 102x Project Template\StudentLogic10.java...
Constructing Javadoc information...
C:\Users\Yurico\Documents\lab\COMP 102x Project Template\StudentLogic10.java:13: error: class StudentLogic is public, should be declared in a file named StudentLogic.java
public class StudentLogic implements GameLogic
       ^
C:\Users\Yurico\Documents\lab\COMP 102x Project Template\StudentLogic10.java:13: warning - @author tag has no arguments.
Standard Doclet version 1.7.0_45
Building tree for all the packages and classes...
Generating C:\Users\Yurico\Documents\lab\COMP 102x Project Template\doc\StudentLogic.html...
C:\Users\Yurico\Documents\lab\COMP 102x Project Template\StudentLogic10.java:36: warning - Parameter "initialX" is documented more than once.
C:\Users\Yurico\Documents\lab\COMP 102x Project Template\StudentLogic10.java:36: warning - Parameter "finalX" is documented more than once.
Generating C:\Users\Yurico\Documents\lab\COMP 102x Project Template\doc\package-frame.html...
Generating C:\Users\Yurico\Documents\lab\COMP 102x Project Template\doc\package-summary.html...
Generating C:\Users\Yurico\Documents\lab\COMP 102x Project Template\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\Yurico\Documents\lab\COMP 102x Project Template\doc\allclasses-frame.html...
Generating C:\Users\Yurico\Documents\lab\COMP 102x Project Template\doc\allclasses-noframe.html...
Generating C:\Users\Yurico\Documents\lab\COMP 102x Project Template\doc\index.html...
Generating C:\Users\Yurico\Documents\lab\COMP 102x Project Template\doc\stylesheet.css...
4 warnings
